@@ -1,5 +1,7 @@
 - disable tests segfaulting in rpmSpecBuild()
 - disable tests using unimplemented functions regarding rpm-4.9
+- disable 2 tests that fails with rpm-4.9
+  (all functions needed by iurt & youri* pass the testsuite)
 - implement more functions with rpm-4.9
 
 Version 0.24 - 09 November 2011
